# tree-sitter-imhex

./: CMakeLists.txt  Makefile  Package.swift  go.mod  pyproject.toml  setup.py  tree-sitter-imhex.pc  tree-sitter.json
bindings/c/: tree-sitter-imhex.pc.in
bindings/c/tree_sitter/: tree-sitter-imhex.h
bindings/go/: binding.go  binding_test.go
bindings/node/: index.d.ts
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_imhex/: __init__.py  binding.c
bindings/swift/TreeSitterImhexTests/: TreeSitterImhexTests.swift
src/: grammar.json  node-types.json  parser.c
